Hopefully I am no longer squashed

--- a/pages/css/style.css
+++ b/pages/css/style.css
@@ -80,6 +80,7 @@ h1, p {
 .headshot {
     border-radius:50%;
     width: 30%;
+    height: 30%;
 }
 
 @media (max-width: 500px) {
